# gimpish

./: .gitignore  CLAUDE.md  DESIGN-app.md  DESIGN.md  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts
examples/: README.md  poster-shapes.scene.json  radial-badge.scene.json  text-card.scene.json
src/gimpish/: __init__.py  bg.py  cli.py  geometry.py  render.py  scene.py  server.py
src/gimpish/web/: index.html
tests/fixtures/: generate_goldens.py
tests/fixtures/scenes/: blends.scene.json  gradients.scene.json  text.scene.json  transforms.scene.json  vector.scene.json
