[project]
name = "gimpish"
version = "0.1.0"
description = "Agent-native image composition tool — Photoshop for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "pyvips>=2.2",
    "typer>=0.12",
]

[project.optional-dependencies]
bg = ["rembg>=2.0", "onnxruntime>=1.17"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "watchfiles>=0.21"]

[project.scripts]
gimpish = "gimpish.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
